--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": "^8.2",
         "brian2694/laravel-toastr": "^5.59",
         "laravel/framework": "^11.0",
-        "laravel/sanctum": "*",
+        "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
